@@ -601,9 +601,17 @@ job_run_script (Job        *job,
 		 * then mark it for closure so that the shell gets EOF
 		 * and the structure gets cleaned up automatically.
 		 */
-		NIH_MUST (io = nih_io_reopen (job, fds[1], NIH_IO_STREAM,
-					      NULL, NULL, NULL, NULL));
-		NIH_MUST (nih_io_write (io, script, strlen (script)) == 0);
+		while (! (io = nih_io_reopen (job, fds[1], NIH_IO_STREAM,
+					      NULL, NULL, NULL, NULL))) {
+			NihError *err;
+
+			err = nih_error_get ();
+			if (err->number != ENOMEM)
+				nih_assert_not_reached ();
+			nih_free (err);
+		}
+
+		NIH_ZERO (nih_io_write (io, script, strlen (script)));
 		nih_io_shutdown (io);
 	} else {
 		/* Pass the script using -c */
